--- a/RideShare/app/src/main/res/values/strings.xml
+++ b/RideShare/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RideShare</string>
+    <string name="title_activity_create_account">Create Account Activity</string>
 </resources>
