--- a/RideShare/app/src/main/res/values/strings.xml
+++ b/RideShare/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">RideShare</string>
     <string name="title_activity_create_account">Create Account Activity</string>
     <string name="title_activity_google_maps">Map</string>
+    <string name="title_activity_find_ride2">FindRide2</string>
 </resources>
